Auto IK Double Generates IK constraints #80437

Closed
opened 2020-09-03 19:09:46 +02:00 by Ovionis · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-01 07:02, hash: c78c425266
Worked: (newest version of Blender that worked as expected)

Short description of error
When you Grab/Move/Translate a bone in pose mode, using Targetless IK constraint, another IK constraint is created that interferes with it.

Exact steps for others to reproduce the error
Add a bone chain (maybe 7 bones)
Note: version 1 requires connected bones.

Version 1:
enable Auto IK on the rig (3D Viewport >> N Panel >> Tool >> Pose Options >> Auto IK)
select a child bone and try to move it.
If you look at the bone constraints panel when you do this, you will see two [TempConstraint] IK constraints.

Version 2
Add an IK constraint to one of the bones. (for fun, name it "TempConstraint")
Now try to move it.
A second IK constraint [TempConstraint] will be seen in the bone constraints panel
If you have Auto IK enabled (Version 1), there will now be 3 different IK constraints on the bone.


Aside from the visual glitchyness of this doubling, this "does" still work.

However in a case like Version 2 when you have an IK constraint and Auto IK enabled,
or in my particular case where I have a constraint but want to toggle its Chain Length,
when the Chain Length does not equal to the original's Chain Length, the IK does not update the bones in the chain.

2020-09-03 11-57-56.mp4

In My Usage, I'm using an addon to essentially just change the [Temp_IK_Constraint] IK constraint, with the mouse wheel (like the default Auto IK does).

Note: I say "TempConstraint" but I just realized by default, their name is actually hidden (the name is "TempConstraint", "TempConstraint.001" and etc, I just have a custom panel that doesn't hide their name)

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-01 07:02, hash: `c78c425266` Worked: (newest version of Blender that worked as expected) **Short description of error** When you Grab/Move/Translate a bone in pose mode, using Targetless IK constraint, another IK constraint is created that interferes with it. **Exact steps for others to reproduce the error** Add a bone chain (maybe 7 bones) Note: version 1 requires connected bones. **Version 1:** enable Auto IK on the rig (3D Viewport >> N Panel >> Tool >> Pose Options >> Auto IK) select a child bone and try to move it. If you look at the bone constraints panel when you do this, you will see two [TempConstraint] IK constraints. **Version 2** Add an IK constraint to one of the bones. (for fun, name it "TempConstraint") Now try to move it. A second IK constraint [TempConstraint] will be seen in the bone constraints panel If you have Auto IK enabled (Version 1), there will now be 3 different IK constraints on the bone. - - - - - - Aside from the visual glitchyness of this doubling, this "does" still work. However in a case like Version 2 when you have an IK constraint and Auto IK enabled, or in my particular case where I have a constraint but want to toggle its Chain Length, when the Chain Length does not equal to the original's Chain Length, the IK does not update the bones in the chain. [2020-09-03 11-57-56.mp4](https://archive.blender.org/developer/F8836788/2020-09-03_11-57-56.mp4) In My Usage, I'm using an addon to essentially just change the [Temp_IK_Constraint] IK constraint, with the mouse wheel (like the default Auto IK does). Note: I say "TempConstraint" but I just realized by default, their name is actually hidden (the name is "TempConstraint", "TempConstraint.001" and etc, I just have a custom panel that doesn't hide their name)
Author

Added subscriber: @Phigon

Added subscriber: @Phigon

Added subscribers: @dr.sybren, @iss

Added subscribers: @dr.sybren, @iss

I am not sure if this is bug really. This option works as described in manual: https://docs.blender.org/manual/en/dev/animation/armatures/posing/tool_settings.html#bpy-types-pose-use-auto-ik

@dr.sybren what do you think?

I am not sure if this is bug really. This option works as described in manual: https://docs.blender.org/manual/en/dev/animation/armatures/posing/tool_settings.html#bpy-types-pose-use-auto-ik @dr.sybren what do you think?

This issue was referenced by 7a0a60dde8

This issue was referenced by 7a0a60dde8b4bf120ab7977e476bf5c82b2a63ad
Member

Added subscribers: @HooglyBoogly, @ZedDB, @lichtwerk

Added subscribers: @HooglyBoogly, @ZedDB, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

The fact that these temporary constraints actually show up in the constraint stack came with eaa44afe70
I guess while strictly correct, these temporary constraints should still be hidden from the UI @HooglyBoogly? see D8895: Dont show temporary IK constraints in the constraint stack

Now, why do we have two of them?
It looks like even before that commit, add_temporary_ik_constraint was called twice (actually generating two constraints).

  • from pose_grab_with_ik_add (Auto IK checkbox)
  • from add_pose_transdata
1  add_temporary_ik_constraint               transform_convert_armature.c 257  0x41fab61 
2  pose_grab_with_ik_add                     transform_convert_armature.c 362  0x41faf91 
3  pose_grab_with_ik                         transform_convert_armature.c 463  0x41fb2b9 
4  createTransPose                           transform_convert_armature.c 832  0x41fc43e 
5  createTransData                           transform_convert.c          1163 0x41f7120 
6  initTransform                             transform.c                  1759 0x41f0315 
1  add_temporary_ik_constraint               transform_convert_armature.c 257  0x41fab61 
2  add_pose_transdata                        transform_convert_armature.c 707  0x41fbe1a 
3  createTransPose                           transform_convert_armature.c 842  0x41fc4b4 
4  createTransData                           transform_convert.c          1163 0x41f7120 
5  initTransform                             transform.c                  1759 0x41f0315 

Why is that?
Because of 9a7f5f1bb4

I guess we should not create a temporary IK constraint on a bone that already has one @ZedDB ? see D8894: Dont add temporary IK constraints twice
(note that D8894 still does not solve the chainlength problem described in this report -- so in general I think it would be best to make sure Auto IK is always preferred if used in conjunction with targetless IK constraints)

The fact that these temporary constraints actually show up in the constraint stack came with eaa44afe70 I guess while strictly correct, these temporary constraints should still be hidden from the UI @HooglyBoogly? see [D8895: Dont show temporary IK constraints in the constraint stack](https://archive.blender.org/developer/D8895) Now, why do we have two of them? It looks like even before that commit, `add_temporary_ik_constraint` was called twice (actually generating two constraints). - from `pose_grab_with_ik_add` (`Auto IK` checkbox) - from `add_pose_transdata` ``` 1 add_temporary_ik_constraint transform_convert_armature.c 257 0x41fab61 2 pose_grab_with_ik_add transform_convert_armature.c 362 0x41faf91 3 pose_grab_with_ik transform_convert_armature.c 463 0x41fb2b9 4 createTransPose transform_convert_armature.c 832 0x41fc43e 5 createTransData transform_convert.c 1163 0x41f7120 6 initTransform transform.c 1759 0x41f0315 ``` ``` 1 add_temporary_ik_constraint transform_convert_armature.c 257 0x41fab61 2 add_pose_transdata transform_convert_armature.c 707 0x41fbe1a 3 createTransPose transform_convert_armature.c 842 0x41fc4b4 4 createTransData transform_convert.c 1163 0x41f7120 5 initTransform transform.c 1759 0x41f0315 ``` Why is that? Because of 9a7f5f1bb4 I guess we should not create a temporary IK constraint on a bone that already has one @ZedDB ? see [D8894: Dont add temporary IK constraints twice](https://archive.blender.org/developer/D8894) (note that [D8894](https://archive.blender.org/developer/D8894) still does not solve the chainlength problem described in this report -- so in general I think it would be best to make sure Auto IK is always preferred if used in conjunction with targetless IK constraints)
Philipp Oeser self-assigned this 2020-09-16 10:20:55 +02:00

This issue was referenced by 41e4079365

This issue was referenced by 41e40793650aa23ad525c395706eae15ec82bff9

This issue was referenced by a985b8bd9e

This issue was referenced by a985b8bd9efd0295be7e9d44eb17359a16bb8613
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80437
No description provided.